--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jenkins</title>
 </head>
 <body>
-    <h1>Hi to jenkins</h1>
+    <h1>Hi to jenkins upadted</h1>
     <h2>I am Jahid Khan</h2>
 </body>
 </html>
