--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jenkins</title>
 </head>
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    h1{
+        text-align: center;
+        margin-top: 100px;
+        font-size: 50px;
+        color: #333;
+    }
+    h2{
+        text-align: center;
+        margin-top: 50px;
+        font-size: 30px;
+        color: #333;
+    }
+</style>
 <body>
-    <h1>Hi to jenkins upadted</h1>
-    <h2>I am Jahid Khan</h2>
+    <h1>Hi Jenkins!!</h1>
     <h2>I am Jahid Khan</h2>
 </body>
 </html>
